<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".Ciudades">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/bienvenida"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <Button
        android:id="@+id/bMexico"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/bBerlin"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonB"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
</LinearLayout>